# collection-manager

./: .gitignore  README.md  build-desktop.ps1  pyproject.toml
src/collect/: cli.py  commands.py  config.py  currency.py  desktop.py  errors.py  images.py  model.py  repository.py  service.py  store.py  web.py
src/collect/templates/: index.html
src/collect/web/: app.py
src/collect/web/templates/: base.html  categories.html  edit.html  help.html  index.html  manage.html  my_collection.html  summary.html  wishlist.html
tools/: desktop_launcher.py
