[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collect"
version = "0.1.0"
description = "CLI and web app to manage a personal collection"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
collect = "collect.cli:main"
collect-web = "collect.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
collect = ["templates/*.html"]
