[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collect"
version = "0.2.0"
description = "CLI and web app to manage a personal collection"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
package = ["pyinstaller>=6.0"]

[project.scripts]
collect = "collect.cli:main"
collect-web = "collect.web.app:main"
collect-app = "collect.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"collect.web" = ["templates/*.html"]
